@@ -16,6 +16,7 @@
 @c along with Octave; see the file COPYING.  If not, see
 @c <http://www.gnu.org/licenses/>.
 
+@ifclear AUTHORSONLY
 @node Preface
 @unnumbered Preface
 @cindex contributors
@@ -70,13 +71,15 @@ you may have.
 @node Acknowledgements
 @unnumberedsec Acknowledgements
 @cindex acknowledgements
+@end ifclear
 
-Many people have already contributed to Octave's development.  The
+Many people have contributed to Octave's development.  The
 following people have helped code parts of Octave or aided in
 various other ways (listed alphabetically).
 
 @include contributors.texi
 
+@ifclear AUTHORSONLY
 Special thanks to the following people and organizations for
 supporting the development of Octave:
 
@@ -191,3 +194,4 @@ USA
 
 Octave can also be downloaded from @url{http://www.octave.org}, where
 additional information is available.
+@end ifclear
